--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -8,6 +8,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        if: failure()
+        with:
+          name: cypress-snapshots
+          path: cypress/snapshots
       - run: npm i
       - name: 'Run Cypress tests'
         run: npx cypress run
