atualizacao do cypress.yml

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -8,21 +8,19 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - run: npm i
-      - name: 'Run Cypress tests'
+      - name: Install dependencies
+        run: npm install
+      - name: Run Cypress tests
         run: npx cypress run
-      - uses: actions/checkout@v4
-      - uses: cypress-io/github-action@v6
-      # after the test run completes store videos and any screenshots
-      - uses: actions/upload-artifact@v4
-      # add the line below to store screenshots only on failures
-      # if: failure()
+      - name: Upload Cypress artifacts
+        uses: actions/upload-artifact@v4
         with:
-            name: cypress-screenshots
-            path: cypress/screenshots
-            if-no-files-found: ignore # 'warn' or 'error' are also available, defaults to warn
-      - uses: actions/upload-artifact@v4
+          name: cypress-screenshots
+          path: cypress/screenshots
+          if-no-files-found: ignore
+      - name: Upload Cypress videos
+        uses: actions/upload-artifact@v4
         with:
-            name: cypress-videos
-            path: cypress/videos
-            if-no-files-found: ignore # 'warn' or 'error' are also available, defaults to warn
+          name: cypress-videos
+          path: cypress/videos
+          if-no-files-found: ignore
